<resources>
    <string name="app_name">M-Hike</string>

    <string name="web_service_url">https://stuiis.cms.gre.ac.uk/COMP1424CoreWS/comp1424cw</string>
    <string name="json">{\"eventName\":\"mens 100 metres\", \"resultList\":[{\"medalColour\":\"bronze\",\"athleteName\":\"gatlin\"},{\"medalColour\":\"silver\",\"athleteName\":\"blake\"},{\"medalColour\":\"gold\",\"athleteName\":\"bolt\"}]} </string>

    <string name="nav_home">Home</string>
    <string name="nav_hikes">Hikes</string>
    <string name="nav_sights">Sights</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="search_hike">Search Hike</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="sights_fragment">Sights Fragment</string>
    <string name="hikes_fragment">Hikes Fragment</string>

    <string name="title_login">M-Hike Login</string>
    <string name="title_register">M-Hike Register</string>

    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="btn_login">Login</string>
    <string name="tv_no_account">Don\'t have an account?</string>
    <string name="btn_register">Register</string>
    <string name="btn_logout">Logout</string>
    <string name="hint_lastname">Enter Lastname</string>
    <string name="hint_firstname">Enter firstname</string>
    <string name="register">Register</string>

    <!-- error messages -->
    <string name="required_name_error">%s cannot contain numbers or spaces</string>
    <string name="required_field_error">%s is required</string>
    <string name="email_exists_error">This email is taken, Please choose a different email</string>
    <string name="hike_exists_error">This hike already exists!</string>

    <string name="invalid_email_error">Please enter a valid email!</string>
    <string name="password_min_error">%s password must be at least %d characters long</string>

    <string name="distance_error">%s Must be at least %d miles</string>

    <string name="elevation_error">%s Must be at least %d foot</string>
    <string name="high_high_error">%s must be greater than %s</string>


    <string name="duration_error">%s Must be at least %d minutes</string>
    <string name="insertion_error">there was an error creating you account. please try again later.</string>


    <string name="profile_fragment">Profile Fragment</string>
    <string name="nav_logout">Logout</string>
    <string name="login_error">Incorrect login/password combination. Please try again</string>
    <string name="add_hike">Add Hike</string>
    <string name="parking">Parking</string>
    <string name="length_miles">length (miles)</string>
    <string name="difficulty">Difficulty</string>
    <string name="example_text">example text</string>
    <string name="register_success">thank you for creating an account with us</string>
    <string name="hike_added_success">Hike successfully added</string>
    <string name="hike_updated_success">Hike updated</string>
    <string name="hike_deleted_success">Hike Deleted</string>
    <string name="hike_update_error">There was an error updating hike details</string>

    <string name="hike_added_error">There was an error adding hike</string>


    <string name="duration_minutes">Duration (mins)</string>
    <string name="hike_date">Hike Date</string>
    <string name="hike_name">Hike Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="distance_miles">Distance (Miles)</string>
    <string name="parking_available">Parking Available</string>
    <string name="elevation_gain">Elevation Gain (ft)</string>
    <string name="high_ft">High (ft)</string>
    <string name="add_observation">Add Observation</string>
    <string name="observation_add_success">Observation added</string>

    <string name="no_hikes">No hikes Found.. Try adding one</string>
    <string name="no_hikes_web_service">There are no hikes to upload</string>

    <string name="no_hikes_observation">No observations yet…trying adding one</string>


    <string name="edit_hike_title">Edit Hike</string>
    <string name="add_hike_title">Add Hike</string>
    <string name="update_hike">Update Hike</string>
    <string name="hike_update_msg">Hike updated</string>
    <string name="hike_update_failed">Could not update hike</string>
    <string name="username_dashboard">Tom Smith</string>
    <string name="observation_title">Sights</string>
    <string name="full_name">%s %s</string>
    <string name="delete_hike">Delete Hike</string>
    <string name="hike_subtitle_msg">You cannot undo this</string>
    <string name="hike_title_confirm">Are you sure you want to delete Hike?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hike_deleted_confirm">Hike deleted</string>
    <string name="hike">Hike</string>
    <string name="time">Time</string>
    <string name="my_hikes">My hikes</string>
    <string name="dashboard_hike">Hike \n<font color="#A9A9A9">View, edit and delete hikes</font></string>
    <string name="dashboard_search">Search \n<font color="#A9A9A9">Search for hikes and view hike details</font></string>

    <string name="dashboard_observations">Sights \n<font color="#A9A9A9">View and add observation for hikes</font></string>
    <string name="dashboard_upload">Upload Hike \n<font color="#A9A9A9">Upload hikes to web server</font></string>
    <string name="upload_hike">Upload Hike</string>
    <string name="observation_date">observation date</string>
    <string name="search">Search</string>
    <string name="hike_details">Hike details</string>
    <string name="objHikes">My observation hikes</string>

    <string name="login_required">You must be logged in!</string>
    <string name="hike_observation_title">Observation details for %s</string>
    <string name="time_label">Select Time</string>


    <string name="time_format_database">%02d:%02d</string>


    <string-array name="parking_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

</resources>