<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:src="@drawable/ic_logo"
        android:layout_height="150dp">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/orange"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="textEmailAddress"

            >

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"

            >

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/orange"
        android:text="@string/btn_login"
        android:textColor="@color/white">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/lbl_login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/login_error"
        android:textColor="@color/red"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium">

    </TextView>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tv_no_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Small">

    </TextView>


    <TextView
        android:id="@+id/btn_register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black">

    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>